Fix spacing

--- a/src/styles/style.css
+++ b/src/styles/style.css
@@ -365,20 +365,14 @@
   .h-\[10vh\] {
     height: 10vh;
   }
-  .h-\[200px\] {
-    height: 200px;
-  }
   .h-\[300px\] {
     height: 300px;
   }
   .h-\[30rem\] {
     height: 30rem;
   }
-  .h-\[250px\] {
-    height: 250px;
-  }
-  .h-\[400px\] {
-    height: 400px;
+  .h-\[200px\] {
+    height: 200px;
   }
   .h-\[500px\] {
     height: 500px;
@@ -386,11 +380,23 @@
   .h-\[50rem\] {
     height: 50rem;
   }
+  .h-\[250px\] {
+    height: 250px;
+  }
+  .h-\[400px\] {
+    height: 400px;
+  }
   .h-\[auto\] {
     height: auto;
   }
   .h-full {
     height: 100%;
+  }
+  .min-h-\[80vh\] {
+    min-height: 80vh;
+  }
+  .min-h-\[100vh\] {
+    min-height: 100vh;
   }
   .min-h-\[972px\] {
     min-height: 972px;
@@ -775,6 +781,26 @@
       margin-top: calc(var(--spacing) * 0);
     }
   }
+  .sm\:mt-40 {
+    @media (width >= 40rem) {
+      margin-top: calc(var(--spacing) * 40);
+    }
+  }
+  .sm\:mt-50 {
+    @media (width >= 40rem) {
+      margin-top: calc(var(--spacing) * 50);
+    }
+  }
+  .sm\:mt-80 {
+    @media (width >= 40rem) {
+      margin-top: calc(var(--spacing) * 80);
+    }
+  }
+  .sm\:mt-96 {
+    @media (width >= 40rem) {
+      margin-top: calc(var(--spacing) * 96);
+    }
+  }
   .sm\:block {
     @media (width >= 40rem) {
       display: block;
@@ -803,6 +829,16 @@
   .sm\:h-\[400px\] {
     @media (width >= 40rem) {
       height: 400px;
+    }
+  }
+  .sm\:min-h-\[100vh\] {
+    @media (width >= 40rem) {
+      min-height: 100vh;
+    }
+  }
+  .sm\:min-h-\[972px\] {
+    @media (width >= 40rem) {
+      min-height: 972px;
     }
   }
   .sm\:w-6 {
@@ -861,6 +897,11 @@
   .sm\:text-\[22px\] {
     @media (width >= 40rem) {
       font-size: 22px;
+    }
+  }
+  .md\:mt-80 {
+    @media (width >= 48rem) {
+      margin-top: calc(var(--spacing) * 80);
     }
   }
   .md\:w-1\/2 {
